<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CamTestActivity!</string>

    <!-- UI Elements -->
    <string name="btn_capture">Click</string>

    <!-- Toast Messages -->
    <string name="take_photo_help">Touch anywhere on screen to take picture</string>

    <color name="Red">#FFFF8D32</color>
    <color name="defaultColor">#FFFFFFFF</color>
    <color name="modify">#FFC0FFBE</color>

    <string name="app_name">MyClub</string>
    <string name="hello_world">Hello world!</string>
    <string name="AjouterClubAdresse">Ajouter adresse</string>
    <string name="action_settings"></string>
    <string name="imgdesc">Description de l image </string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string-array name="menu_list">
        <item>Supprimer</item>
        <item>Refresh</item>
    </string-array>
    <string-array name="menu_list_entrainement">
        <item>Supprimer</item>
        <item>Refresh</item>
    </string-array>
    <string-array name="menu_gestion">
        <item>Supprimer</item>
        <item>Refresh</item>
    </string-array>
    <string-array name="desciplines">
        <item>Musculation</item>
        <item>Cardio</item>
        <item>Fitness</item>
        <item>cours chorégraphiés( Salsa,Zumba..)</item>
        <item>Raquette</item>
    </string-array>
    <string-array name="titles">
        <item>Gestion des adhérents</item>
        <item>Gestion des salles </item>
        <item>Listes des entrainements </item>
        <item>Gestion des activités </item>
        <item>Votre club </item>

    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_adherents">Adherents</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_ajouter_adherent">AjouterAdherent</string>
    <string name="title_activity_supprimer_adherent">SupprimerAdherent</string>
    <string name="title_activity_modifier_adherent">ModifierAdherent</string>
    <string name="title_activity_rechercher_adherents">RechercherAdherents</string>
    <string name="title_activity_ajouter_adherents">AjouterAdherents</string>
    <string name="title_activity_salles">Salles</string>
    <string name="title_activity_evenements">evenements</string>
    <string name="title_activity_entrainements">Entrainements</string>
    <string name="title_activity_activites">Activites</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="commentaire">Votre commentaire ici.</string>
    <string name="disciplines">Discipline souhaitée?</string>
    <string name="Poid">Poid</string>
    <string name="KG">KG</string>
    <string name="id_adherent">Id Adherent</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_modifier__adherent">Modifier_Adherent</string>
    <string name="title_activity_supprimer_adhrent">SupprimerAdhrent</string>
    <string name="ajouter">Ajouter</string>
    <string name="title_activity_items_adherent">ItemsAdherent</string>
    <string name="afficherAdherent">Afficher adherent</string>
    <string name="ID">ID</string>
    <string name="title_activity_ajouter_salle">Gestion des salles</string>
    <string name="Nomsalles">Nom de la salle</string>
    <string name="coach">Nom du coach responsable</string>
    <string name="activitePratique">Type d\'activitée</string>
    <string name="title_activity_modifier_salle">Modifier_salle</string>
    <string name="title_activity_afficher_salles">Afficher_salles</string>
    <string name="Modifier">Modifier</string>
    <string name="title_activity_testmaps">testmaps</string>
    <string name="supprimerClub">Supprimer un Club</string>
    <string name="title_activity_ajouter_entrainement">AjouterEntrainement</string>
    <string name="title_activity_afficher_entrainements">AfficherEntrainements</string>
    <string name="title_activity_ajouter_activite">AjouterActivite</string>
    <string name="title_activity_afficher_activites">AfficherActivites</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_syncro">Syncro</string>

</resources>
